--- a/locales/fr.json
+++ b/locales/fr.json
@@ -131,7 +131,8 @@
       "quarter": "Trimestre civil",
       "calendar_year_and_quarter": "Année et trimestre civils"
     },
-    "activity": "Activité"
+    "activity": "Activité",
+    "organisations": "Organismes"
   },
   "dataSidebarDropdowns": [
     {
