--- a/locales/en.json
+++ b/locales/en.json
@@ -49,7 +49,8 @@
     "calendarYear": "Calendar Year",
     "calendarYearAndQuarter": "Calendar Year and Quarter",
     "moreFilters": "More Filters",
-    "numberOfResults": "Number of results",
+    "totalNumberOfResults": "Total number of results",
+    "numberOfResults": "Number of results to display",
     "displayOptions": "Display options",
     "noResults": "There are no results for your selected filters.",
     "selectSomeOptions": "Select some options, and then click Run on the left.",
