Add translations to FR, ES, PT

--- a/locales/es.json
+++ b/locales/es.json
@@ -49,6 +49,7 @@
     "calendarYear": "Año natural",
     "calendarYearAndQuarter": "Año y trimestre natural",
     "moreFilters": "Más filtros",
+    "totalNumberOfResults": "Número total de resultados",
     "numberOfResults": "Número de resultados",
     "displayOptions": "Opciones de presentación",
     "noResults": "Los filtros seleccionados no han arrojado resultados.",
@@ -105,6 +106,8 @@
       "activity.iati_identifier": "Identificador de la IATI de la actividad",
       "activity.title": "Título de la actividad",
       "activity.description": "Activity Description",
+      "activity.start_date": "Fecha de inicio de actividad",
+      "activity.end_date": "Fecha de fin de actividad",
       "reporting_organisation_group": "Grupo de Organizaciones Notificadoras",
       "reporting_organisation": "Organización notificadora",
       "reporting_organisation_type": "Tipo de organización notificadora",
