--- a/locales/fr.json
+++ b/locales/fr.json
@@ -49,6 +49,7 @@
     "calendarYear": "Année civile",
     "calendarYearAndQuarter": "Année et trimestre civils",
     "moreFilters": "Plus de filtres",
+    "totalNumberOfResults": "Nombre total de résultats",
     "numberOfResults": "Nombre de résultats",
     "displayOptions": "Options d’affichage",
     "noResults": "Aucun résultat ne correspond aux filtres sélectionnés.",
@@ -105,6 +106,8 @@
       "activity.iati_identifier": "Identifiant de l’IITA",
       "activity.title": "Titre",
       "activity.description": "Activity Description",
+      "activity.start_date": "Date de début de l’activité",
+      "activity.end_date": "Date de fin de l’activité",
       "reporting_organisation_group": "Groupes d’organismes déclarantes",
       "reporting_organisation": "Organisme déclarant",
       "reporting_organisation_type": "Type d’organisme déclarant",
