--- a/locales/pt.json
+++ b/locales/pt.json
@@ -49,6 +49,7 @@
     "calendarYear": "Ano civil",
     "calendarYearAndQuarter": "Ano e trimestre civis",
     "moreFilters": "Ano e trimestre civis",
+    "totalNumberOfResults": "Número total de resultados",
     "numberOfResults": "Número de resultados",
     "displayOptions": "Opções de apresentação",
     "noResults": "Não há resultados para os filtros que selecionou",
@@ -105,6 +106,8 @@
       "activity.iati_identifier": "Identificador de atividade da IATI",
       "activity.title": "Título da atividade",
       "activity.description": "Activity Description",
+      "activity.start_date": "Data do início de atividade",
+      "activity.end_date": "Data do fim de atividade",
       "reporting_organisation_group": "Grupo de organizações relatórios",
       "reporting_organisation": "Organização relatora",
       "reporting_organisation_type": "Tipo de organização relatora",
