Add some translations for additional columns

--- a/locales/en.json
+++ b/locales/en.json
@@ -58,7 +58,7 @@
     "clearField": "Clear",
     "advancedSearch": "Advanced Search",
     "noMatchingOptions": "Sorry, no matching options.",
-    "exactSearchTerm": "Type an exact search term and press Enter.",
+    "exactSearchTerm": "Type to search...",
     "advancedSearchFields": {
       "code": "Code",
       "name": "Name",
@@ -134,7 +134,19 @@
       "transaction_type": "Resource Flows",
       "year": "Calendar Year | Calendar Years",
       "quarter": "Calendar Quarter | Calendar Quarters",
-      "calendar_year_and_quarter": "Calendar Year and Quarter | Calendar Years and Quarters"
+      "calendar_year_and_quarter": "Calendar Year and Quarter | Calendar Years and Quarters",
+      "receiver_organisation.name_en": "Receiver Organisation",
+      "receiver_organisation.name_fr": "Receiver Organisation (FR)",
+      "receiver_organisation.name_es": "Receiver Organisation (ES)",
+      "receiver_organisation.name_pt": "Receiver Organisation (PT)",
+      "provider_organisation.name_en": "Provider Organisation",
+      "provider_organisation.name_fr": "Provider Organisation (FR)",
+      "provider_organisation.name_es": "Provider Organisation (ES)",
+      "provider_organisation.name_pt": "Provider Organisation (PT)",
+      "activity.title_en": "Activity Title",
+      "activity.title_fr": "Activity Title (FR)",
+      "activity.title_es": "Activity Title (ES)",
+      "activity.title_pt": "Activity Title (PT)"
     },
     "activity": "Activity",
     "organisations": "Organisations",
