--- a/locales/es.json
+++ b/locales/es.json
@@ -57,6 +57,8 @@
     "amount": "Valor",
     "clearField": "Borrar",
     "advancedSearch": "Búsqueda avanzada",
+    "noMatchingOptions": "Sorry, no matching options.",
+    "exactSearchTerm": "Type to search...",
     "advancedSearchFields": {
       "code": "Código",
       "name": "Nombre",
@@ -132,7 +134,19 @@
       "transaction_type": "Flujos de Recursos",
       "year": "Año natural",
       "quarter": "Trimestre natural",
-      "calendar_year_and_quarter": "Año y trimestre naturales"
+      "calendar_year_and_quarter": "Año y trimestre naturales",
+      "receiver_organisation.name_en": "Organización receptora (EN)",
+      "receiver_organisation.name_fr": "Organización receptora (FR)",
+      "receiver_organisation.name_es": "Organización receptora",
+      "receiver_organisation.name_pt": "Organización receptora (PT)",
+      "provider_organisation.name_en": "Organización proveedora (EN)",
+      "provider_organisation.name_fr": "Organización proveedora (FR)",
+      "provider_organisation.name_es": "Organización proveedora",
+      "provider_organisation.name_pt": "Organización proveedora (PT)",
+      "activity.title_en": "Título de la actividad (EN)",
+      "activity.title_fr": "Título de la actividad (FR)",
+      "activity.title_es": "Título de la actividad",
+      "activity.title_pt": "Título de la actividad (PT)"
     },
     "activity": "Actividad",
     "organisations": "Organizaciónes",
