--- a/locales/fr.json
+++ b/locales/fr.json
@@ -57,6 +57,8 @@
     "amount": "Valeur",
     "clearField": "Effacer",
     "advancedSearch": "Recherche avancée",
+    "noMatchingOptions": "Sorry, no matching options.",
+    "exactSearchTerm": "Type to search...",
     "advancedSearchFields": {
       "code": "Code",
       "name": "Nom",
@@ -132,7 +134,19 @@
       "transaction_type": "Flux de Ressources",
       "year": "Année civile",
       "quarter": "Trimestre civil",
-      "calendar_year_and_quarter": "Année et trimestre civils"
+      "calendar_year_and_quarter": "Année et trimestre civils",
+      "receiver_organisation.name_en": "Organisme bénéficiaire (EN)",
+      "receiver_organisation.name_fr": "Organisme bénéficiaire",
+      "receiver_organisation.name_es": "Organisme bénéficiaire (ES)",
+      "receiver_organisation.name_pt": "Organisme bénéficiaire (PT)",
+      "provider_organisation.name_en": "Organisme prestataire (EN)",
+      "provider_organisation.name_fr": "Organisme prestataire",
+      "provider_organisation.name_es": "Organisme prestataire (ES)",
+      "provider_organisation.name_pt": "Organisme prestataire (PT)",
+      "activity.title_en": "Titre",
+      "activity.title_fr": "Titre",
+      "activity.title_es": "Titre (ES)",
+      "activity.title_pt": "Titre (PT)"
     },
     "activity": "Activité",
     "organisations": "Organismes",
