--- a/locales/pt.json
+++ b/locales/pt.json
@@ -57,6 +57,8 @@
     "amount": "Valor",
     "clearField": "Apagar",
     "advancedSearch": "Busca Avançada",
+    "noMatchingOptions": "Sorry, no matching options.",
+    "exactSearchTerm": "Type to search...",
     "advancedSearchFields": {
       "code": "Código",
       "name": "Nome",
@@ -132,7 +134,19 @@
       "transaction_type": "Fluxos de Recurso",
       "year": "Ano civil",
       "quarter": "Trimestre civil",
-      "calendar_year_and_quarter": "Ano e trimestre civis"
+      "calendar_year_and_quarter": "Ano e trimestre civis",
+      "receiver_organisation.name_en": "Receiver Organisation",
+      "receiver_organisation.name_fr": "Receiver Organisation (FR)",
+      "receiver_organisation.name_es": "Receiver Organisation (ES)",
+      "receiver_organisation.name_pt": "Receiver Organisation",
+      "provider_organisation.name_en": "Provider Organisation",
+      "provider_organisation.name_fr": "Provider Organisation (FR)",
+      "provider_organisation.name_es": "Provider Organisation (ES)",
+      "provider_organisation.name_pt": "Provider Organisation",
+      "activity.title_en": "Título da atividade (EN)",
+      "activity.title_fr": "Título da atividade (FR)",
+      "activity.title_es": "Título da atividade (ES)",
+      "activity.title_pt": "Título da atividade"
     },
     "activity": "Atividade",
     "organisations": "Organizações",
