--- a/locales/en.json
+++ b/locales/en.json
@@ -156,6 +156,16 @@
       "local_currrency": "Local Currency"
     }
   },
+  "dataProcessing": {
+    "id": "ID",
+    "type": "Type",
+    "country": "Country or Region",
+    "beganProcessing": "Began Update",
+    "completedProcessing": "Completed Update",
+    "status": "Status",
+    "complete": "Complete",
+    "processing": "Processing"
+  },
   "dataSidebarDropdowns": [
     {
       "path": "/data/recipient-country-or-region/",
