--- a/locales/pt.json
+++ b/locales/pt.json
@@ -156,6 +156,16 @@
       "local_currrency": "Local Currency"
     }
   },
+  "dataProcessing": {
+    "id": "ID",
+    "type": "Tipo",
+    "country": "País ou região",
+    "beganProcessing": "Início da atualização",
+    "completedProcessing": "Fim da atualização",
+    "status": "Estado",
+    "complete": "Completa",
+    "processing": "Em curso"
+  },
   "dataSidebarDropdowns": [
     {
       "path": "/pt/data/recipient-country-or-region/",
