--- a/locales/fr.json
+++ b/locales/fr.json
@@ -44,6 +44,13 @@
     "filters": "Filtres",
     "filtersText": "Sélectionnez des filtres pour personnaliser la visualisation.",
     "selectedFilters": "Filtres appliqués ",
+    "filtersModal": {
+      "standardTitle": "Filtrer par listes de codes standards",
+      "standardText": "Sélectionnez une ou plusieurs options dans chacune des listes déroulantes. Les résultats sont mis à jour automatiquement.",
+      "specificTitle": "Filtrer par activités spécifiques, ou organismes prestataires ou bénéficiaires",
+      "specificText": "Tapez pour rechercher et sélectionner des valeurs spécifiques dans toutes les activités. Les résultats sont mis à jour automatiquement."
+    },
+    "loading": "Chargement...",
     "preview": "Aperçu",
     "currency": "Devise",
     "calendarYear": "Année civile",
@@ -56,16 +63,19 @@
     "selectSomeOptions": "Sélectionnez plusieurs options, puis lancez la recherche.",
     "amount": "Valeur",
     "clearField": "Effacer",
+    "close": "Fermer",
     "advancedSearch": "Recherche avancée",
-    "noMatchingOptions": "Sorry, no matching options.",
-    "exactSearchTerm": "Type to search...",
+    "noMatchingOptions": "Désolé, il n'y a pas d'options correspondantes.",
+    "exactSearchTerm": "Tapez pour rechercher...",
+    "advancedSearchEmptyText": "Il n'y a pas d'enregistrements",
+    "advancedSearchEmptyFilteredText": "Il n'y a pas d'enregistrements correspondant à votre demande",
     "advancedSearchFields": {
       "code": "Code",
       "name": "Nom",
       "description": "Description",
       "select": "Sélectionnez"
     },
-    "advancedSearchFilter": "Type to search for name or description...",
+    "advancedSearchFilter": "Tapez pour rechercher par nom ou par description...",
     "budgetsSpending": {
       "budgetsOrSpending": "Flux de Ressources",
       "budgets": "Budgets",
@@ -189,6 +199,7 @@
   "translations": {
     "selectCountry": "Choisir un pays",
     "downloadFile": "Télécharger le fichier",
+    "preparingFile": "Préparation du fichier...",
     "lastUpdated": "Dernière mise à jour :",
     "language": "Langue"
   },
